--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/firebase-adapter": "^0.1.2-pr.183-76202b42.8",
+    "firebase": "^9.6.9",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
     "react": "17.0.2",
